--- a/survey-app-backend/package.json
+++ b/survey-app-backend/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.15.5",
+    "mongoose": "^5.7.1",
     "nodemon": "^1.19.2"
   }
 }
